# tokenoptimizer-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml
tokenoptimizer/: __init__.py  cli.py  client.py  config.py
