[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenoptimizer"
version = "1.0.0"
description = "CLI tool for optimizing tokens using The Token Company API"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
keywords = ["token", "optimization", "compression", "llm", "ai", "cli"]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tokenoptimizer = "tokenoptimizer.cli:main"

[project.urls]
Homepage = "https://github.com/TheShoutingParrot/tokenoptimizer-cli"
Documentation = "https://github.com/TheShoutingParrot/tokenoptimizer-cli#readme"
Repository = "https://github.com/TheShoutingParrot/tokenoptimizer-cli"
Issues = "https://github.com/TheShoutingParrot/tokenoptimizer-cli/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
